--- a/1806/Login.cshtml
+++ b/1806/Login.cshtml
@@ -1,6 +1,19 @@
-﻿@model LoginViewModel
-<form asp-action="Login" asp-controller="Account" method="post">
-    <input asp-for="Email" />
-    <input asp-for="Password" type="password" />
-    <button type="submit">Login</button>
+﻿@model YourNamespace.ViewModels.LoginViewModel
+
+<form asp-controller="Account" asp-action="Login" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    <div class="form-group">
+        <label asp-for="Username"></label>
+        <input asp-for="Username" class="form-control" />
+        <span asp-validation-for="Username" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Password"></label>
+        <input asp-for="Password" type="password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
